# stml

./: .gitattributes  .gitignore  HANDOFF_signal-to-feature-engineering.md  README.md  alternate_data_cleaned.csv  cleaning_alternate_data.ipynb  pyproject.toml
data/: additional_data.xlsx  alternate_data_cleaned.csv  macro_features_engineered.parquet
data/features/: f10_price_action.csv  f12_path_structure.csv  f13_wavelet.csv  f15_conditional_risk.csv  f16_concept_drift.csv  f17_hmm_regimes.csv  f1_counter_trend.csv  f2_volatility.csv  f3_regime_posteriors.csv  f4_latent.csv  f5_signal_derived.csv  f7_microstructure.csv  f8_calendar.csv  f9_cross_sectional.csv
data/meta/: anomalous_rows.csv  macro_features.csv  triple_barrier_labels.csv  (+8 more)
metamodel-apb/: .gitignore  .markdownlint.jsonc  CLAUDE.md  pyproject.toml
metamodel-apb/docs/: methodology.md
metamodel-apb/docs/plans/: 2026-05-30-metamodel-build.md  2026-05-30-pass2.md  2026-05-30-pass3.md  2026-05-30-pass4.md  2026-05-30-pass5.md
metamodel-apb/experiments/: _common.py  ex1_edge_decomposition.py  ex3_barrier_surface.py  ex4_calibration.py  ex5_signal_characterisation.py  s3_calibration_selected.py  s4_cluster_importance.py  s6_barrier_backtest.py  s6_deflation_gate.py  x8_feature_counts.py
metamodel-apb/reports/: CW_Breakdown.md  STML_ActionItem_Tracker.md  T3_03_Alken_Metamodel_Report.md
metamodel-apb/reports/research/: LR-1.md  LR-2.md  LR-3.md  LR-4.md  LR-5.md  LR-6.md  LR-7.md  LR-8.md  LR-9.md  nlr-cw-v1.md
metamodel-apb/src/alken_metamodel/: __init__.py  _env.py  backtest.py  calibration.py  cluster_importance.py  cost_model.py  cross_validation.py  deflation.py  dim_reduction.py  emit.py  evaluation.py  experiment_log.py  features.py  macro.py  models.py  neural.py  pipeline.py  regime.py  seeding.py  signal_analysis.py  significance.py  sizing.py  triple_barrier.py  volatility.py
metamodel-apb/src/alken_metamodel/_vendor/: __init__.py  cluster_feature_importance.py  regression_metrics.py  trend_scanning.py  vsn.py
metamodel-apb/tests/: conftest.py  test_backtest.py  test_calibration.py  test_cluster_importance.py  test_cost_model.py  test_cross_validation.py  test_cross_validation_embargo.py  test_deflation.py  test_dim_reduction.py  test_evaluation.py  test_ex6_s512.py  test_experiment_log.py  test_features.py  test_load_path.py  test_macro.py  test_models.py  test_neural.py  test_pipeline.py  test_pipeline_embargo.py  test_regime.py  test_signal_analysis.py  test_significance.py  test_sizing.py  test_triple_barrier.py  test_volatility.py
notebooks/: agent_eda.ipynb  eda.ipynb  exploration.ipynb  triple_barrier.ipynb
refs/: missing-holidays.md  project-instructions.md  triple_barrier_guide.md
reports/: README.md  breakout_donchian.md  feature-catalog.md  hybrid_filtered_momentum.md  mean_reversion.md  missing-data-report.md  replication-ledger.md  replication-summary.md  signal-characterization.md  ts_momentum.md  vol_regime_gated.md  xsect_rank.md
results/: README.md  feature_matrix.parquet  feature_matrix_provenance.json  feature_redundancy.csv  feature_redundancy.json  instrument_scope.json
src/: README.md
tests/: test_align.py  test_archetypes.py  test_baselines.py  test_build_determinism.py  test_characterize.py  test_cv.py  test_drift_features.py  test_features_catalog.py  test_features_ext_leakage.py  test_features_leakage.py  test_features_provenance.py  test_features_scope.py  test_gates.py  test_labeling.py  test_latent.py  test_ledger.py  test_macro_features.py  test_metrics.py  test_model_cv.py  test_model_labels.py  test_model_pipeline.py  test_nav.py  test_regime_features.py  test_regimes.py  test_regimes_hmm.py  test_run_characterize.py  test_run_replicate.py  test_search.py  test_splits.py  test_xsection.py
(+434 files in other folders)
