[project]
name = "stml"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arch>=8.0.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
# Optional extras for Harry's branch. Install with:
#   uv sync --extra harry-features
# Currently only the wavelet module needs an extra wheel; TDA (ripser) is
# deferred. See reports/harry/SETUP.md.
harry-features = ["pywavelets>=1.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "jupyterlab>=4.5.7",
    "nbstripout>=0.9.1",
    "ruff>=0.15.13",
]
# Optional: external exchange calendars used only as a cross-check in
# stml.na_checks. The hand-coded tables are authoritative, so these are not
# required to run the notebook or the diagnostics. Install with:
#   uv sync --group calendars
calendars = [
    "pandas-market-calendars>=5.0",
    "exchange-calendars>=4.0",
    "holidays>=0.40",
]
